@@ -1,6 +1,5 @@
 package com.verchuk.electro.service;
 
-import com.verchuk.electro.dto.request.WallOpeningRequest;
 import com.verchuk.electro.dto.request.WallRequest;
 import com.verchuk.electro.dto.response.WallOpeningResponse;
 import com.verchuk.electro.dto.response.WallResponse;
@@ -10,16 +9,20 @@ import com.verchuk.electro.model.Wall;
 import com.verchuk.electro.model.WallOpening;
 import com.verchuk.electro.repository.FloorPlanRepository;
 import com.verchuk.electro.repository.WallRepository;
+import com.verchuk.electro.repository.RoomRepository;
+import com.verchuk.electro.repository.RoomTypeRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 public class WallService {
+
     @Autowired
     private WallRepository wallRepository;
 
@@ -27,8 +30,17 @@ public class WallService {
     private FloorPlanRepository floorPlanRepository;
 
     @Autowired
+    private RoomRepository roomRepository;
+
+    @Autowired
+    private RoomTypeRepository roomTypeRepository;
+
+    @Autowired
     private UserService userService;
 
+    /**
+     * Создание одной стены (используется при обычном рисовании)
+     */
     @Transactional
     public WallResponse createWall(Long projectId, WallRequest request) {
         FloorPlan floorPlan = getFloorPlanForProject(projectId);
@@ -41,26 +53,30 @@ public class WallService {
                 .endY(request.getEndY())
                 .thickness(request.getThickness() != null ? request.getThickness() : BigDecimal.valueOf(20))
                 .wallType(request.getWallType())
+                .openings(new ArrayList<>())
                 .build();
 
         if (request.getOpenings() != null && !request.getOpenings().isEmpty()) {
-            final Wall wallFinal = wall; // Создаем final переменную для использования в лямбде
+            Wall finalWall = wall;
             List<WallOpening> openings = request.getOpenings().stream()
-                    .map(openingRequest -> WallOpening.builder()
-                            .wall(wallFinal)
-                            .position(openingRequest.getPosition())
-                            .width(openingRequest.getWidth())
-                            .height(openingRequest.getHeight())
-                            .openingType(openingRequest.getOpeningType())
+                    .map(opReq -> WallOpening.builder()
+                            .wall(finalWall)
+                            .position(opReq.getPosition())
+                            .width(opReq.getWidth())
+                            .height(opReq.getHeight())
+                            .openingType(opReq.getOpeningType())
                             .build())
-                    .collect(Collectors.toList());
-            wall.setOpenings(openings);
+                    .toList();
+            wall.getOpenings().addAll(openings);
         }
 
         wall = wallRepository.save(wall);
         return mapToResponse(wall);
     }
 
+    /**
+     * Обновление существующей стены
+     */
     @Transactional
     public WallResponse updateWall(Long projectId, Long wallId, WallRequest request) {
         FloorPlan floorPlan = getFloorPlanForProject(projectId);
@@ -75,29 +91,80 @@ public class WallService {
         wall.setStartY(request.getStartY());
         wall.setEndX(request.getEndX());
         wall.setEndY(request.getEndY());
+
         if (request.getThickness() != null) {
             wall.setThickness(request.getThickness());
         }
         wall.setWallType(request.getWallType());
 
-        // Обновление проемов
+        // Обновление проемов (очистка и замена)
         if (request.getOpenings() != null) {
             wall.getOpenings().clear();
-            final Wall wallFinal = wall; // Создаем final переменную для использования в лямбде
-            request.getOpenings().forEach(openingRequest -> {
-                WallOpening opening = WallOpening.builder()
-                        .wall(wallFinal)
-                        .position(openingRequest.getPosition())
-                        .width(openingRequest.getWidth())
-                        .height(openingRequest.getHeight())
-                        .openingType(openingRequest.getOpeningType())
-                        .build();
-                wallFinal.getOpenings().add(opening);
-            });
+            Wall finalWall = wall;
+            List<WallOpening> newOpenings = request.getOpenings().stream()
+                    .map(opReq -> WallOpening.builder()
+                            .wall(finalWall)
+                            .position(opReq.getPosition())
+                            .width(opReq.getWidth())
+                            .height(opReq.getHeight())
+                            .openingType(opReq.getOpeningType())
+                            .build())
+                    .toList();
+            wall.getOpenings().addAll(newOpenings);
         }
 
         wall = wallRepository.save(wall);
         return mapToResponse(wall);
+    }
+
+    /**
+     * Пакетное сохранение стен.
+     * Используется визуальным редактором для синхронизации всего плана сразу.
+     */
+    @Transactional
+    public List<WallResponse> saveWalls(Long projectId, List<WallRequest> requests) {
+        FloorPlan floorPlan = getFloorPlanForProject(projectId);
+
+        // Удаляем старые стены этого плана перед сохранением новых
+        wallRepository.deleteByFloorPlanId(floorPlan.getId());
+
+        List<Wall> walls = requests.stream()
+                .map(request -> {
+                    Wall wall = Wall.builder()
+                            .floorPlan(floorPlan)
+                            .startX(request.getStartX())
+                            .startY(request.getStartY())
+                            .endX(request.getEndX())
+                            .endY(request.getEndY())
+                            .thickness(request.getThickness() != null ? request.getThickness() : BigDecimal.valueOf(20))
+                            .wallType(request.getWallType())
+                            .openings(new ArrayList<>())
+                            .build();
+
+                    if (request.getOpenings() != null && !request.getOpenings().isEmpty()) {
+                        List<WallOpening> openings = request.getOpenings().stream()
+                                .map(opReq -> WallOpening.builder()
+                                        .wall(wall)
+                                        .position(opReq.getPosition())
+                                        .width(opReq.getWidth())
+                                        .height(opReq.getHeight())
+                                        .openingType(opReq.getOpeningType())
+                                        .build())
+                                .toList();
+                        wall.getOpenings().addAll(openings);
+                    }
+                    return wall;
+                })
+                .collect(Collectors.toList());
+
+        List<Wall> savedWalls = wallRepository.saveAll(walls);
+
+        // Место для вызова автоматического определения комнат, если план изменился радикально
+        // autoDetectRooms(floorPlan);
+
+        return savedWalls.stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
     @Transactional
@@ -114,67 +181,32 @@ public class WallService {
     }
 
     public List<WallResponse> getWallsByFloorPlan(Long floorPlanId) {
-        List<Wall> walls = wallRepository.findByFloorPlanId(floorPlanId);
-        return walls.stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Transactional
-    public List<WallResponse> saveWalls(Long projectId, List<WallRequest> requests) {
-        FloorPlan floorPlan = getFloorPlanForProject(projectId);
-        
-        // Удаляем старые стены
-        wallRepository.deleteByFloorPlanId(floorPlan.getId());
-
-        // Создаем новые стены
-        List<Wall> walls = requests.stream()
-                .map(request -> {
-                    Wall wall = Wall.builder()
-                            .floorPlan(floorPlan)
-                            .startX(request.getStartX())
-                            .startY(request.getStartY())
-                            .endX(request.getEndX())
-                            .endY(request.getEndY())
-                            .thickness(request.getThickness() != null ? request.getThickness() : BigDecimal.valueOf(20))
-                            .wallType(request.getWallType())
-                            .build();
-
-                    if (request.getOpenings() != null && !request.getOpenings().isEmpty()) {
-                        List<WallOpening> openings = request.getOpenings().stream()
-                                .map(openingRequest -> WallOpening.builder()
-                                        .wall(wall)
-                                        .position(openingRequest.getPosition())
-                                        .width(openingRequest.getWidth())
-                                        .height(openingRequest.getHeight())
-                                        .openingType(openingRequest.getOpeningType())
-                                        .build())
-                                .collect(Collectors.toList());
-                        wall.setOpenings(openings);
-                    }
-
-                    return wall;
-                })
-                .collect(Collectors.toList());
-
-        walls = wallRepository.saveAll(walls);
-        return walls.stream()
+        return wallRepository.findByFloorPlanId(floorPlanId).stream()
                 .map(this::mapToResponse)
                 .collect(Collectors.toList());
     }
 
     public FloorPlan getFloorPlanForProject(Long projectId) {
-        var designer = userService.getCurrentUser();
         return floorPlanRepository.findByProjectId(projectId)
                 .orElseThrow(() -> new ResourceNotFoundException("FloorPlan", "projectId", projectId));
+    }
+
+    /**
+     * Заглушка для логики автоматического распознавания комнат по стенам.
+     */
+    @Transactional
+    public void autoDetectRooms(FloorPlan floorPlan) {
+        // Здесь реализуется алгоритм поиска замкнутых циклов в графе стен.
+        // На данный момент логика создания комнаты "авто-стенами" реализована на фронтенде
+        // для обеспечения моментального отклика UI.
     }
 
     private WallResponse mapToResponse(Wall wall) {
         List<WallOpeningResponse> openings = wall.getOpenings() != null
                 ? wall.getOpenings().stream()
-                        .map(this::mapOpeningToResponse)
-                        .collect(Collectors.toList())
-                : List.of();
+                .map(this::mapOpeningToResponse)
+                .collect(Collectors.toList())
+                : new ArrayList<>();
 
         return WallResponse.builder()
                 .id(wall.getId())
@@ -198,4 +230,3 @@ public class WallService {
                 .build();
     }
 }
-
